--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,44 @@
     @apply bg-background text-foreground;
   }
 }
+.ql-toolbar {
+  border: none !important;
+  background-color: #fafafa !important;
+}
+.ql-toolbar .ql-formats:not(:last-child) {
+  border-right: 1px solid #dcdcdc !important;
+  padding-right: 12px !important;
+}
+.ql-container {
+  font-family: "Lato", sans-serif !important;
+  border: none !important;
+  height: unset !important;
+}
+.ql-editor {
+  line-height: 22px !important;
+  padding: 8px 12px !important;
+  color: #1d1c1d !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  font-family: "Lato", sans-serif !important;
+}
+.ql-editor a {
+  color: #1264a3 !important;
+  text-decoration: underline !important;
+}
+.ql-editor a:hover {
+  text-decoration: underline !important;
+}
+.ql-renderer {
+  padding: 0 !important;
+}
+.ql-editor :before {
+  left: 12px !important;
+  font-family: "Lato", sans-serif !important;
+  font-style: normal !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 22px !important;
+  color: #8d8d8d !important;
+  @apply truncate;
+}
