--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,3 +108,7 @@
   color: #8d8d8d !important;
   @apply truncate;
 }
+.messages-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #dcdcdc #f8f8f8;
+}
