--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "AvantGrade";
+  src:
+    url("../../public/fonts/AvantGardeITCbyBT-Demi.woff2") format("woff2"),
+    url("../../public/fonts/AvantGardeITCbyBT-Demi.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
